# HaffmanFileEncoder

./: CMakeLists.txt  decoder.cpp  encoder.cpp  generator.cpp  main.cpp  sonya_generator.cpp  v2_decoder.cpp  v2_encoder.cpp  v2_generator.cpp
